2007-10-15  David Smith  <dsmith@redhat.com>

	From David Wilder <dwilder@us.ibm.com>
	* tapsets.cxx (mark_query::handle_query_module): Updated to handle
	64-bit platforms correctly.

2007-10-15  Zhaolei  <zhaolei@cn.fujitsu.com>

	From Cai Fei <caifei@cn.fujitsu.com>
	* conversions.stp: Add a function kernel_string_n for copy
	non-0-terminated string with fixed length from kernel space at
	given address.
	* stapfuncs.5.in: Add kernel_string_n.
	* nfsd.stp: Using kernel_string_n to copy non-0-terminated string
	with fixed length from kernel space at given address.
	* nfs_proc.stp: Ditto.

2007-10-12  David Smith  <dsmith@redhat.com>

	* tapsets.cxx (dwflpp::setup): Added 'debuginfo_needed' parameter
	to not error if no debuginfo present.
	(hex_dump): New function.
	(mark_query::handle_query_module): Updated for
	10/2/2007 markers patch.  Currently only handles markers in the
	kernel image itself - not in modules.
	
2007-10-12  Martin Hunt  <hunt@redhat.com>

	* Makefile.am (staprun_LDADD): Add -lpthread.
	* Makefile.in: Rebuilt.

2007-10-11  Frank Ch. Eigler  <fche@elastic.org>

	* systemtap.spec.in: Make -testsuite subrpm require dejagnu.

2007-10-10  Jim Keniston  <jkenisto@us.ibm.com>

	* runtime/uprobes/uprobes_ppc64.[ch]: Added
	* runtime/uprobes/uprobes_s390.[ch]: Added

2007-10-09  Jim Keniston  <jkenisto@us.ibm.com>

	PR 5083
	* runtime/uprobes/uprobes.c: Adjust module ref-count
	when creating or removing uprobe_process, so "rmmod
	--wait uprobes" waits as needed until uretprobed
	functions return.

2007-10-08  Jim Keniston  <jkenisto@us.ibm.com>

	PR 5079
	* main.cxx: Add pass 4.5: make uprobes.ko in runtime/uprobes
	* buildrun.cxx: Add uprobes_enabled() and make_uprobes().
	Factor run_make_cmd() out of compile_pass().
	* buildrun.h: Add uprobes_enabled and make_uprobes decls.
	* tapsets.cxx: Do correct #include for modprobed uprobes.ko;
	set need_uprobes in pass 2.
	* session.h: Add need_uprobes

	* runtime/staprun/common.c: Add -u option -> need_uprobes